Assignment_5/y.output
Terminals unused in grammar

   STRUCT_KEYWORD
   UNION_KEYWORD
   SINGLE_COMMENT
   MULTI_COMMENT


State 321 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | INTEGER_CONSTANT
    3                   | FLOAT_CONSTANT
    4                   | CHAR_CONSTANT
    5                   | ENUMERATION
    6                   | STRING_LITERAL
    7                   | '(' expression ')'

    8 expression: assignment_expression
    9           | expression ',' assignment_expression

   10 unary_operator: '&'
   11               | '*'
   12               | '+'
   13               | '-'
   14               | '~'
   15               | '!'

   16 postfix_expression: primary_expression
   17                   | postfix_expression '[' expression ']'
   18                   | postfix_expression '(' ')'
   19                   | postfix_expression '(' argument_expression_list ')'
   20                   | postfix_expression '.' IDENTIFIER
   21                   | postfix_expression VAL_AT IDENTIFIER
   22                   | postfix_expression PLUS_PLUS
   23                   | postfix_expression MINUS_MINUS
   24                   | '(' type_name ')' '{' initializer_list '}'
   25                   | '(' type_name ')' '{' initializer_list ',' '}'

   26 argument_expression_list: assignment_expression
   27                         | argument_expression_list ',' assignment_expression

   28 unary_expression: postfix_expression
   29                 | PLUS_PLUS unary_expression
   30                 | MINUS_MINUS unary_expression
   31                 | unary_operator cast_expression
   32                 | SIZEOF_KEYWORD unary_expression
   33                 | SIZEOF_KEYWORD '(' type_name ')'

   34 cast_expression: unary_expression
   35                | '(' type_name ')' cast_expression

   36 multiplicative_expression: cast_expression
   37                          | multiplicative_expression '*' cast_expression
   38                          | multiplicative_expression '/' cast_expression
   39                          | multiplicative_expression '%' cast_expression

   40 additive_expression: multiplicative_expression
   41                    | additive_expression '+' multiplicative_expression
   42                    | additive_expression '-' multiplicative_expression

   43 shift_expression: additive_expression
   44                 | shift_expression LEFT_SHIFT additive_expression
   45                 | shift_expression RIGHT_SHIFT additive_expression

   46 relational_expression: shift_expression
   47                      | relational_expression '<' shift_expression
   48                      | relational_expression '>' shift_expression
   49                      | relational_expression LESS_EQUAL shift_expression
   50                      | relational_expression GREATER_EQUAL shift_expression

   51 equality_expression: relational_expression
   52                    | equality_expression EQUAL_EQUAL relational_expression
   53                    | equality_expression NOT_EQUAL relational_expression

   54 and_expression: equality_expression
   55               | and_expression '&' equality_expression

   56 exclusive_or_expression: and_expression
   57                        | exclusive_or_expression '^' and_expression

   58 inclusive_or_expression: exclusive_or_expression
   59                        | inclusive_or_expression '|' exclusive_or_expression

   60 logical_and_expression: inclusive_or_expression
   61                       | logical_and_expression LOGICAL_AND JUMP_AUG inclusive_or_expression

   62 logical_or_expression: logical_and_expression
   63                      | logical_or_expression LOGICAL_OR JUMP_AUG logical_and_expression

   64 conditional_expression: logical_or_expression
   65                       | logical_or_expression '?' expression ':' conditional_expression

   66 assignment_expression: conditional_expression
   67                      | unary_expression assignment_operator assignment_expression

   68 assignment_operator: '='
   69                    | STAR_EQUAL
   70                    | BY_EQUAL
   71                    | PERCENT_EQUAL
   72                    | PLUS_EQUAL
   73                    | MINUS_EQUAL
   74                    | LEFT_SHIFT_EQUAL
   75                    | RIGHT_SHIFT_EQUAL
   76                    | AND_EQUAL
   77                    | BITWISENOT_EQUAL
   78                    | OR_EQUAL

   79 constant_expression: conditional_expression

   80 declaration: declaration_specifiers ';'
   81            | declaration_specifiers init_declarator_list ';'

   82 declaration_specifiers: storage_class_specifier
   83                       | storage_class_specifier declaration_specifiers
   84                       | type_specifier
   85                       | type_specifier declaration_specifiers
   86                       | type_qualifier
   87                       | type_qualifier declaration_specifiers
   88                       | function_specifier
   89                       | function_specifier declaration_specifiers

   90 init_declarator_list: init_declarator
   91                     | init_declarator_list ',' init_declarator

   92 init_declarator: declarator
   93                | declarator '=' initializer

   94 storage_class_specifier: TYPEDEF_KEYWORD
   95                        | EXTERN_KEYWORD
   96                        | STATIC_KEYWORD
   97                        | AUTO_KEYWORD
   98                        | REGISTER_KEYWORD

   99 type_specifier: VOID_KEYWORD
  100               | CHAR_KEYWORD
  101               | SHORT_KEYWORD
  102               | INT_KEYWORD
  103               | LONG_KEYWORD
  104               | FLOAT_KEYWORD
  105               | DOUBLE_KEYWORD
  106               | SIGNED_KEYWORD
  107               | UNSIGNED_KEYWORD
  108               | BOOL_KEYWORD
  109               | COMPLEX_KEYWORD
  110               | IMAGINARY_KEYWORD
  111               | enum_specifier

  112 specifier_qualifier_list: type_specifier specifier_qualifier_list
  113                         | type_specifier
  114                         | type_qualifier specifier_qualifier_list
  115                         | type_qualifier

  116 enum_specifier: ENUM_KEYWORD '{' enumerator_list '}'
  117               | ENUM_KEYWORD IDENTIFIER '{' enumerator_list '}'
  118               | ENUM_KEYWORD IDENTIFIER

  119 enumerator_list: enumerator
  120                | enumerator_list ',' enumerator

  121 enumerator: IDENTIFIER
  122           | IDENTIFIER '=' constant_expression

  123 type_qualifier: CONST_KEYWORD
  124               | RESTRICT_KEYWORD
  125               | VOLATILE_KEYWORD

  126 function_specifier: INLINE_KEYWORD

  127 declarator: pointer direct_declarator
  128           | direct_declarator

  129 direct_declarator: IDENTIFIER
  130                  | '(' declarator ')'
  131                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  132                  | direct_declarator '[' assignment_expression ']'
  133                  | direct_declarator '[' type_qualifier_list ']'
  134                  | direct_declarator '[' ']'
  135                  | direct_declarator '[' STATIC_KEYWORD type_qualifier_list assignment_expression ']'
  136                  | direct_declarator '[' STATIC_KEYWORD assignment_expression ']'
  137                  | direct_declarator '[' type_qualifier_list STATIC_KEYWORD assignment_expression ']'
  138                  | direct_declarator '[' type_qualifier_list '*' ']'
  139                  | direct_declarator '[' '*' ']'
  140                  | direct_declarator '(' parameter_type_list ')'
  141                  | direct_declarator '(' identifier_list ')'
  142                  | direct_declarator '(' ')'

  143 pointer: '*'
  144        | '*' type_qualifier_list
  145        | '*' pointer
  146        | '*' type_qualifier_list pointer

  147 type_qualifier_list: type_qualifier
  148                    | type_qualifier_list type_qualifier

  149 parameter_type_list: parameter_list
  150                    | parameter_list ',' ELLIPSES

  151 parameter_list: parameter_declaration
  152               | parameter_list ',' parameter_declaration

  153 parameter_declaration: declaration_specifiers declarator
  154                      | declaration_specifiers

  155 identifier_list: IDENTIFIER
  156                | identifier_list ',' IDENTIFIER

  157 type_name: specifier_qualifier_list

  158 initializer: assignment_expression
  159            | '{' initializer_list '}'
  160            | '{' initializer_list ',' '}'

  161 initializer_list: initializer
  162                 | initializer_list ',' initializer
  163                 | initializer_list ',' designation initializer

  164 designation: designator_list '='

  165 designator_list: designator
  166                | designator_list designator

  167 designator: '[' constant_expression ']'
  168           | '.' IDENTIFIER

  169 statement: labeled_statement
  170          | compound_statement
  171          | expression_statement
  172          | selection_statement
  173          | iteration_statement
  174          | jump_statement

  175 labeled_statement: IDENTIFIER ':' statement
  176                  | CASE_KEYWORD constant_expression ':' statement
  177                  | DEFAULT_KEYWORD ':' statement

  178 compound_statement: '{' '}'
  179                   | '{' block_item_list '}'

  180 block_item_list: block_item
  181                | block_item_list block_item

  182 block_item: declaration
  183           | statement

  184 expression_statement: ';'
  185                     | expression ';'

  186 selection_statement: IF_KEYWORD '(' expression ')' statement
  187                    | IF_KEYWORD '(' expression ')' statement ELSE_KEYWORD statement
  188                    | SWITCH_KEYWORD '(' expression ')' statement

  189 iteration_statement: WHILE_KEYWORD '(' expression ')' statement
  190                    | DO_KEYWORD statement WHILE_KEYWORD '(' expression ')' ';'
  191                    | FOR_KEYWORD '(' expression_statement expression_statement expression ')' statement
  192                    | FOR_KEYWORD '(' declaration expression_statement expression ')' statement

  193 jump_statement: GOTO_KEYWORD IDENTIFIER ';'
  194               | CONTINUE_KEYWORD ';'
  195               | BREAK_KEYWORD ';'
  196               | RETURN_KEYWORD ';'
  197               | RETURN_KEYWORD expression ';'

  198 translation_unit: external_declaration
  199                 | translation_unit external_declaration

  200 external_declaration: function_definition
  201                     | declaration

  202 function_definition: declaration_specifiers declarator declaration_list compound_statement
  203                    | declaration_specifiers declarator compound_statement

  204 declaration_list: declaration
  205                 | declaration_list declaration

  206 JUMP_AUG: %empty


Terminals, with rules where they appear

$end (0) 0
'!' (33) 15
'%' (37) 39
'&' (38) 10 55
'(' (40) 7 18 19 24 25 33 35 130 140 141 142 186 187 188 189 190 191
    192
')' (41) 7 18 19 24 25 33 35 130 140 141 142 186 187 188 189 190 191
    192
'*' (42) 11 37 138 139 143 144 145 146
'+' (43) 12 41
',' (44) 9 25 27 91 120 150 152 156 160 162 163
'-' (45) 13 42
'.' (46) 20 168
'/' (47) 38
':' (58) 65 175 176 177
';' (59) 80 81 184 185 190 193 194 195 196 197
'<' (60) 47
'=' (61) 68 93 122 164
'>' (62) 48
'?' (63) 65
'[' (91) 17 131 132 133 134 135 136 137 138 139 167
']' (93) 17 131 132 133 134 135 136 137 138 139 167
'^' (94) 57
'{' (123) 24 25 116 117 159 160 178 179
'|' (124) 59
'}' (125) 24 25 116 117 159 160 178 179
'~' (126) 14
error (256)
AUTO_KEYWORD (258) 97
ENUM_KEYWORD (259) 116 117 118
RESTRICT_KEYWORD (260) 124
UNSIGNED_KEYWORD (261) 107
BREAK_KEYWORD (262) 195
EXTERN_KEYWORD (263) 95
RETURN_KEYWORD (264) 196 197
VOID_KEYWORD (265) 99
CASE_KEYWORD (266) 176
FLOAT_KEYWORD (267) 104
SHORT_KEYWORD (268) 101
VOLATILE_KEYWORD (269) 125
CHAR_KEYWORD (270) 100
FOR_KEYWORD (271) 191 192
SIGNED_KEYWORD (272) 106
WHILE_KEYWORD (273) 189 190
CONST_KEYWORD (274) 123
GOTO_KEYWORD (275) 193
SIZEOF_KEYWORD (276) 32 33
BOOL_KEYWORD (277) 108
CONTINUE_KEYWORD (278) 194
IF_KEYWORD (279) 186 187
STATIC_KEYWORD (280) 96 135 136 137
COMPLEX_KEYWORD (281) 109
DEFAULT_KEYWORD (282) 177
INLINE_KEYWORD (283) 126
STRUCT_KEYWORD (284)
IMAGINARY_KEYWORD (285) 110
DO_KEYWORD (286) 190
INT_KEYWORD (287) 102
SWITCH_KEYWORD (288) 188
DOUBLE_KEYWORD (289) 105
LONG_KEYWORD (290) 103
TYPEDEF_KEYWORD (291) 94
ELSE_KEYWORD (292) 187
REGISTER_KEYWORD (293) 98
UNION_KEYWORD (294)
INTEGER_CONSTANT (295) 2
FLOAT_CONSTANT (296) 3
ENUMERATION (297) 5
CHAR_CONSTANT (298) 4
STRING_LITERAL (299) 6
VAL_AT (300) 21
PLUS_PLUS (301) 22 29
MINUS_MINUS (302) 23 30
LEFT_SHIFT (303) 44
RIGHT_SHIFT (304) 45
LESS_EQUAL (305) 49
GREATER_EQUAL (306) 50
EQUAL_EQUAL (307) 52
NOT_EQUAL (308) 53
LOGICAL_AND (309) 61
LOGICAL_OR (310) 63
ELLIPSES (311) 150
STAR_EQUAL (312) 69
BY_EQUAL (313) 70
PERCENT_EQUAL (314) 71
PLUS_EQUAL (315) 72
MINUS_EQUAL (316) 73
LEFT_SHIFT_EQUAL (317) 74
RIGHT_SHIFT_EQUAL (318) 75
AND_EQUAL (319) 76
BITWISENOT_EQUAL (320) 77
OR_EQUAL (321) 78
SINGLE_COMMENT (322)
MULTI_COMMENT (323)
IDENTIFIER (324) 1 20 21 117 118 121 122 129 155 156 168 175 193


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
primary_expression (95)
    on left: 1 2 3 4 5 6 7, on right: 16
expression (96)
    on left: 8 9, on right: 7 9 17 65 185 186 187 188 189 190 191 192
    197
unary_operator (97)
    on left: 10 11 12 13 14 15, on right: 31
postfix_expression (98)
    on left: 16 17 18 19 20 21 22 23 24 25, on right: 17 18 19 20 21
    22 23 28
argument_expression_list (99)
    on left: 26 27, on right: 19 27
unary_expression (100)
    on left: 28 29 30 31 32 33, on right: 29 30 32 34 67
cast_expression (101)
    on left: 34 35, on right: 31 35 36 37 38 39
multiplicative_expression (102)
    on left: 36 37 38 39, on right: 37 38 39 40 41 42
additive_expression (103)
    on left: 40 41 42, on right: 41 42 43 44 45
shift_expression (104)
    on left: 43 44 45, on right: 44 45 46 47 48 49 50
relational_expression (105)
    on left: 46 47 48 49 50, on right: 47 48 49 50 51 52 53
equality_expression (106)
    on left: 51 52 53, on right: 52 53 54 55
and_expression (107)
    on left: 54 55, on right: 55 56 57
exclusive_or_expression (108)
    on left: 56 57, on right: 57 58 59
inclusive_or_expression (109)
    on left: 58 59, on right: 59 60 61
logical_and_expression (110)
    on left: 60 61, on right: 61 62 63
logical_or_expression (111)
    on left: 62 63, on right: 63 64 65
conditional_expression (112)
    on left: 64 65, on right: 65 66 79
assignment_expression (113)
    on left: 66 67, on right: 8 9 26 27 67 131 132 135 136 137 158
assignment_operator (114)
    on left: 68 69 70 71 72 73 74 75 76 77 78, on right: 67
constant_expression (115)
    on left: 79, on right: 122 167 176
declaration (116)
    on left: 80 81, on right: 182 192 201 204 205
declaration_specifiers (117)
    on left: 82 83 84 85 86 87 88 89, on right: 80 81 83 85 87 89 153
    154 202 203
init_declarator_list (118)
    on left: 90 91, on right: 81 91
init_declarator (119)
    on left: 92 93, on right: 90 91
storage_class_specifier (120)
    on left: 94 95 96 97 98, on right: 82 83
type_specifier (121)
    on left: 99 100 101 102 103 104 105 106 107 108 109 110 111, on right:
    84 85 112 113
specifier_qualifier_list (122)
    on left: 112 113 114 115, on right: 112 114 157
enum_specifier (123)
    on left: 116 117 118, on right: 111
enumerator_list (124)
    on left: 119 120, on right: 116 117 120
enumerator (125)
    on left: 121 122, on right: 119 120
type_qualifier (126)
    on left: 123 124 125, on right: 86 87 114 115 147 148
function_specifier (127)
    on left: 126, on right: 88 89
declarator (128)
    on left: 127 128, on right: 92 93 130 153 202 203
direct_declarator (129)
    on left: 129 130 131 132 133 134 135 136 137 138 139 140 141 142,
    on right: 127 128 131 132 133 134 135 136 137 138 139 140 141 142
pointer (130)
    on left: 143 144 145 146, on right: 127 145 146
type_qualifier_list (131)
    on left: 147 148, on right: 131 133 135 137 138 144 146 148
parameter_type_list (132)
    on left: 149 150, on right: 140
parameter_list (133)
    on left: 151 152, on right: 149 150 152
parameter_declaration (134)
    on left: 153 154, on right: 151 152
identifier_list (135)
    on left: 155 156, on right: 141 156
type_name (136)
    on left: 157, on right: 24 25 33 35
initializer (137)
    on left: 158 159 160, on right: 93 161 162 163
initializer_list (138)
    on left: 161 162 163, on right: 24 25 159 160 162 163
designation (139)
    on left: 164, on right: 163
designator_list (140)
    on left: 165 166, on right: 164 166
designator (141)
    on left: 167 168, on right: 165 166
statement (142)
    on left: 169 170 171 172 173 174, on right: 175 176 177 183 186
    187 188 189 190 191 192
labeled_statement (143)
    on left: 175 176 177, on right: 169
compound_statement (144)
    on left: 178 179, on right: 170 202 203
block_item_list (145)
    on left: 180 181, on right: 179 181
block_item (146)
    on left: 182 183, on right: 180 181
expression_statement (147)
    on left: 184 185, on right: 171 191 192
selection_statement (148)
    on left: 186 187 188, on right: 172
iteration_statement (149)
    on left: 189 190 191 192, on right: 173
jump_statement (150)
    on left: 193 194 195 196 197, on right: 174
translation_unit (151)
    on left: 198 199, on right: 0 199
external_declaration (152)
    on left: 200 201, on right: 198 199
function_definition (153)
    on left: 202 203, on right: 200
declaration_list (154)
    on left: 204 205, on right: 202 205
JUMP_AUG (155)
    on left: 206, on right: 61 63


State 0

    0 $accept: . translation_unit $end

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    TYPEDEF_KEYWORD    shift, and go to state 21
    REGISTER_KEYWORD   shift, and go to state 22

    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29
    translation_unit         go to state 30
    external_declaration     go to state 31
    function_definition      go to state 32


State 1

   97 storage_class_specifier: AUTO_KEYWORD .

    $default  reduce using rule 97 (storage_class_specifier)


State 2

  116 enum_specifier: ENUM_KEYWORD . '{' enumerator_list '}'
  117               | ENUM_KEYWORD . IDENTIFIER '{' enumerator_list '}'
  118               | ENUM_KEYWORD . IDENTIFIER

    IDENTIFIER  shift, and go to state 33
    '{'         shift, and go to state 34


State 3

  124 type_qualifier: RESTRICT_KEYWORD .

    $default  reduce using rule 124 (type_qualifier)


State 4

  107 type_specifier: UNSIGNED_KEYWORD .

    $default  reduce using rule 107 (type_specifier)


State 5

   95 storage_class_specifier: EXTERN_KEYWORD .

    $default  reduce using rule 95 (storage_class_specifier)


State 6

   99 type_specifier: VOID_KEYWORD .

    $default  reduce using rule 99 (type_specifier)


State 7

  104 type_specifier: FLOAT_KEYWORD .

    $default  reduce using rule 104 (type_specifier)


State 8

  101 type_specifier: SHORT_KEYWORD .

    $default  reduce using rule 101 (type_specifier)


State 9

  125 type_qualifier: VOLATILE_KEYWORD .

    $default  reduce using rule 125 (type_qualifier)


State 10

  100 type_specifier: CHAR_KEYWORD .

    $default  reduce using rule 100 (type_specifier)


State 11

  106 type_specifier: SIGNED_KEYWORD .

    $default  reduce using rule 106 (type_specifier)


State 12

  123 type_qualifier: CONST_KEYWORD .

    $default  reduce using rule 123 (type_qualifier)


State 13

  108 type_specifier: BOOL_KEYWORD .

    $default  reduce using rule 108 (type_specifier)


State 14

   96 storage_class_specifier: STATIC_KEYWORD .

    $default  reduce using rule 96 (storage_class_specifier)


State 15

  109 type_specifier: COMPLEX_KEYWORD .

    $default  reduce using rule 109 (type_specifier)


State 16

  126 function_specifier: INLINE_KEYWORD .

    $default  reduce using rule 126 (function_specifier)


State 17

  110 type_specifier: IMAGINARY_KEYWORD .

    $default  reduce using rule 110 (type_specifier)


State 18

  102 type_specifier: INT_KEYWORD .

    $default  reduce using rule 102 (type_specifier)


State 19

  105 type_specifier: DOUBLE_KEYWORD .

    $default  reduce using rule 105 (type_specifier)


State 20

  103 type_specifier: LONG_KEYWORD .

    $default  reduce using rule 103 (type_specifier)


State 21

   94 storage_class_specifier: TYPEDEF_KEYWORD .

    $default  reduce using rule 94 (storage_class_specifier)


State 22

   98 storage_class_specifier: REGISTER_KEYWORD .

    $default  reduce using rule 98 (storage_class_specifier)


State 23

  201 external_declaration: declaration .

    $default  reduce using rule 201 (external_declaration)


State 24

   80 declaration: declaration_specifiers . ';'
   81            | declaration_specifiers . init_declarator_list ';'
  202 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  203                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 35
    '('         shift, and go to state 36
    '*'         shift, and go to state 37
    ';'         shift, and go to state 38

    init_declarator_list  go to state 39
    init_declarator       go to state 40
    declarator            go to state 41
    direct_declarator     go to state 42
    pointer               go to state 43


State 25

   82 declaration_specifiers: storage_class_specifier .
   83                       | storage_class_specifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    TYPEDEF_KEYWORD    shift, and go to state 21
    REGISTER_KEYWORD   shift, and go to state 22

    $default  reduce using rule 82 (declaration_specifiers)

    declaration_specifiers   go to state 44
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29


State 26

   84 declaration_specifiers: type_specifier .
   85                       | type_specifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    TYPEDEF_KEYWORD    shift, and go to state 21
    REGISTER_KEYWORD   shift, and go to state 22

    $default  reduce using rule 84 (declaration_specifiers)

    declaration_specifiers   go to state 45
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29


State 27

  111 type_specifier: enum_specifier .

    $default  reduce using rule 111 (type_specifier)


State 28

   86 declaration_specifiers: type_qualifier .
   87                       | type_qualifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    TYPEDEF_KEYWORD    shift, and go to state 21
    REGISTER_KEYWORD   shift, and go to state 22

    $default  reduce using rule 86 (declaration_specifiers)

    declaration_specifiers   go to state 46
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29


State 29

   88 declaration_specifiers: function_specifier .
   89                       | function_specifier . declaration_specifiers

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    TYPEDEF_KEYWORD    shift, and go to state 21
    REGISTER_KEYWORD   shift, and go to state 22

    $default  reduce using rule 88 (declaration_specifiers)

    declaration_specifiers   go to state 47
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29


State 30

    0 $accept: translation_unit . $end
  199 translation_unit: translation_unit . external_declaration

    $end               shift, and go to state 48
    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    TYPEDEF_KEYWORD    shift, and go to state 21
    REGISTER_KEYWORD   shift, and go to state 22

    declaration              go to state 23
    declaration_specifiers   go to state 24
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29
    external_declaration     go to state 49
    function_definition      go to state 32


State 31

  198 translation_unit: external_declaration .

    $default  reduce using rule 198 (translation_unit)


State 32

  200 external_declaration: function_definition .

    $default  reduce using rule 200 (external_declaration)


State 33

  117 enum_specifier: ENUM_KEYWORD IDENTIFIER . '{' enumerator_list '}'
  118               | ENUM_KEYWORD IDENTIFIER .

    '{'  shift, and go to state 50

    $default  reduce using rule 118 (enum_specifier)


State 34

  116 enum_specifier: ENUM_KEYWORD '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 51

    enumerator_list  go to state 52
    enumerator       go to state 53


State 35

  129 direct_declarator: IDENTIFIER .

    $default  reduce using rule 129 (direct_declarator)


State 36

  130 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 35
    '('         shift, and go to state 36
    '*'         shift, and go to state 37

    declarator         go to state 54
    direct_declarator  go to state 42
    pointer            go to state 43


State 37

  143 pointer: '*' .
  144        | '*' . type_qualifier_list
  145        | '*' . pointer
  146        | '*' . type_qualifier_list pointer

    RESTRICT_KEYWORD  shift, and go to state 3
    VOLATILE_KEYWORD  shift, and go to state 9
    CONST_KEYWORD     shift, and go to state 12
    '*'               shift, and go to state 37

    $default  reduce using rule 143 (pointer)

    type_qualifier       go to state 55
    pointer              go to state 56
    type_qualifier_list  go to state 57


State 38

   80 declaration: declaration_specifiers ';' .

    $default  reduce using rule 80 (declaration)


State 39

   81 declaration: declaration_specifiers init_declarator_list . ';'
   91 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 58
    ';'  shift, and go to state 59


State 40

   90 init_declarator_list: init_declarator .

    $default  reduce using rule 90 (init_declarator_list)


State 41

   92 init_declarator: declarator .
   93                | declarator . '=' initializer
  202 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  203                    | declaration_specifiers declarator . compound_statement

    AUTO_KEYWORD       shift, and go to state 1
    ENUM_KEYWORD       shift, and go to state 2
    RESTRICT_KEYWORD   shift, and go to state 3
    UNSIGNED_KEYWORD   shift, and go to state 4
    EXTERN_KEYWORD     shift, and go to state 5
    VOID_KEYWORD       shift, and go to state 6
    FLOAT_KEYWORD      shift, and go to state 7
    SHORT_KEYWORD      shift, and go to state 8
    VOLATILE_KEYWORD   shift, and go to state 9
    CHAR_KEYWORD       shift, and go to state 10
    SIGNED_KEYWORD     shift, and go to state 11
    CONST_KEYWORD      shift, and go to state 12
    BOOL_KEYWORD       shift, and go to state 13
    STATIC_KEYWORD     shift, and go to state 14
    COMPLEX_KEYWORD    shift, and go to state 15
    INLINE_KEYWORD     shift, and go to state 16
    IMAGINARY_KEYWORD  shift, and go to state 17
    INT_KEYWORD        shift, and go to state 18
    DOUBLE_KEYWORD     shift, and go to state 19
    LONG_KEYWORD       shift, and go to state 20
    TYPEDEF_KEYWORD    shift, and go to state 21
    REGISTER_KEYWORD   shift, and go to state 22
    '{'                shift, and go to state 60
    '='                shift, and go to state 61

    $default  reduce using rule 92 (init_declarator)

    declaration              go to state 62
    declaration_specifiers   go to state 63
    storage_class_specifier  go to state 25
    type_specifier           go to state 26
    enum_specifier           go to state 27
    type_qualifier           go to state 28
    function_specifier       go to state 29
    compound_statement       go to state 64
    declaration_list         go to state 65


State 42
